Replace palette emoji with custom icon with swirl background

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <!-- Card 2: Visualize -->
       <div class="feature-card">
         <div class="feature-icon-container">
-          <img src="https://em-content.zobj.net/source/apple/391/artist-palette_1f3a8.png" alt="Visualize" class="feature-icon">
+          <img src="images/palette-icon.png" alt="Visualize" class="feature-icon-large">
         </div>
         <h3 class="feature-title">Visualize your style</h3>
         <p class="feature-description">Instantly transform and see your room in your dream style. Choose from our existing styles or dream up your own.</p>
