Replace all feature icons with custom icons with swirl backgrounds

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- Card 1: Upload -->
       <div class="feature-card">
         <div class="feature-icon-container">
-          <img src="https://em-content.zobj.net/source/apple/391/framed-picture_1f5bc-fe0f.png" alt="Upload" class="feature-icon">
+          <img src="images/frame-icon.png" alt="Upload" class="feature-icon-large">
         </div>
         <h3 class="feature-title">Upload room photo</h3>
         <p class="feature-description">Take a photo of your room or upload any existing image from your camera roll to get started.</p>
@@ -91,7 +91,7 @@
       <!-- Card 3: Get Plan -->
       <div class="feature-card">
         <div class="feature-icon-container">
-          <img src="https://em-content.zobj.net/source/apple/391/light-bulb_1f4a1.png" alt="Plan" class="feature-icon">
+          <img src="images/lightbulb-icon.png" alt="Plan" class="feature-icon-large">
         </div>
         <h3 class="feature-title">Get your personalized plan + design expert</h3>
         <p class="feature-description">Receive personal style tips and product picks tailored to your specific room, and chat with our design agent 24/7.</p>
