Replace hero sparkle and cloud with custom icons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="hero-image-container">
       <!-- 3D Sparkles decoration -->
-      <img src="https://em-content.zobj.net/source/apple/391/sparkles_2728.png" alt="sparkle" class="sparkle sparkle-top">
+      <img src="images/sparkle-icon.png" alt="sparkle" class="sparkle sparkle-top">
 
       <!-- Cycling images container -->
       <div class="image-carousel">
@@ -35,7 +35,7 @@
       </div>
 
       <!-- 3D Cloud decoration -->
-      <img src="https://em-content.zobj.net/source/apple/391/cloud_2601-fe0f.png" alt="cloud" class="cloud">
+      <img src="images/cloud-icon.png" alt="cloud" class="cloud">
     </div>
   </section>
 
